Added Settings Activity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.swat.onthespot.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName="com.swat.onthespot.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.swat.onthespot.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
