--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,9 +13,14 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="com.swat.onthespot.MainActivity"
             android:label="@string/app_name" >
+            
+            <meta-data android:name="android.app.searchable"
+            	android:resource="@xml/searchable" />
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,6 +34,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.swat.onthespot.MainActivity" />
+        </activity>
+        <activity 
+            android:name=".SearchResultsActivity"
+            android:label="@string/title_activity_searchresults"
+            android:parentActivityName=".MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
         </activity>
     </application>
 
