--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,18 +13,30 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="com.swat.onthespot.MainActivity"
             android:label="@string/app_name" >
-
+            
+            <meta-data android:name="android.app.searchable"
+            	android:resource="@xml/searchable" />
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            
-         	<meta-data android:name="android.app.searchable"
-         	    android:resource="@xml/searchable"/>
-                    	
+        </activity>
+        
+        <activity 
+            android:name=".SearchActivity"
+            android:label="@string/title_activity_search"
+            android:launchMode="singleTop"
+            android:parentActivityName=".MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+            	android:resource="@xml/searchable" />
         </activity>
         
         <activity
@@ -36,29 +48,10 @@
                 android:value="com.swat.onthespot.MainActivity" />
         </activity>
         
-        <activity
-            android:name="com.swat.onthespot.SearchActivity"
-            android:launchMode="singleTop"
-            android:label="@string/title_activity_search"
-            android:parentActivityName="com.swat.onthespot.MainActivity" >
-            
-            <intent-filter>
-            	<action android:name="android.intent.action.SEARCH" />
-        	</intent-filter>
-        	
-        	<meta-data android:name="android.app.searchable"
-                   android:resource="@xml/searchable"/>
-        	
-        	<meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.swat.onthespot.MainActivity" />
-        
-        </activity>
-        
-        <!-- Points to searchable activity so the whole app can invoke search. -->
-        <meta-data
-        	android:name="android.app.default_searchable"
-            android:value="com.swat.onthespot.SearchActivity" />
+        <!-- Put the default_searchable metadata here so every activity can invoke search -->
+        <meta-data 
+            android:name="android.app.default_searchable"
+            android:value=".SearchActivity" />
                     
     </application>
 
