--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,32 +13,32 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <activity
             android:name="com.swat.onthespot.MainActivity"
             android:label="@string/app_name" >
-            
-            <meta-data android:name="android.app.searchable"
-            	android:resource="@xml/searchable" />
-            
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity 
-            android:name=".SearchActivity"
+        <activity
+            android:name="com.swat.onthespot.SearchActivity"
             android:label="@string/title_activity_search"
             android:launchMode="singleTop"
             android:parentActivityName=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
-            	android:resource="@xml/searchable" />
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
-        
         <activity
             android:name="com.swat.onthespot.SettingsActivity"
             android:label="@string/title_activity_settings"
@@ -47,12 +47,18 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.swat.onthespot.MainActivity" />
         </activity>
-        
+
         <!-- Put the default_searchable metadata here so every activity can invoke search -->
-        <meta-data 
+        <meta-data
             android:name="android.app.default_searchable"
             android:value=".SearchActivity" />
-                    
+
+        <provider
+            android:name="com.swat.onthespot.SearchProvider"
+            android:authorities="com.swat.onthespot.searchprovider"
+            android:enabled="true"
+            android:exported="false" >
+        </provider>
     </application>
 
 </manifest>
