--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.swat.onthespot.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/StyledIndicators" >
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
