--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../ViewPagerIndicatorTabLibrary
+android.library.reference.1=../../Desktop/Android-ViewPagerIndicator-master/library
+android.library.reference.2=../../Desktop/adt-bundle-windows-x86-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
