--- a/project.properties
+++ b/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=Google Inc.:Google APIs:19
-android.library.reference.1=../../Desktop/Android-ViewPagerIndicator-master/library
-android.library.reference.2=../../Desktop/adt-bundle-windows-x86-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.3=../../Desktop/Google-Directions-Android-master/library
+android.library.reference.1=..\\..\\Desktop\\Android-ViewPagerIndicator-master\\library
+android.library.reference.2=..\\..\\Desktop\\adt-bundle-windows-x86-20131030\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
+android.library.reference.3=../MapsRouting
