--- a/project.properties
+++ b/project.properties
@@ -11,7 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.1=..\\ViewPagerIndicatorTabLibrary
-android.library.reference.2=..\\google-play-services_lib
-android.library.reference.3=../Map
+target=Google Inc.:Google APIs:19
+android.library.reference.1=../../Desktop/adt-bundle-windows-x86-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.2=../MapsRouting
+android.library.reference.3=../../Desktop/Android-ViewPagerIndicator-master/library
