--- a/project.properties
+++ b/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=..\\ViewPagerIndicatorTabLibrary
-android.library.reference.2=..\\google-play-services_lib
-android.library.reference.3=../Map
+android.library.reference.1=../Map
+android.library.reference.2=../google-play-services_lib
+android.library.reference.3=../ViewPagerIndicatorTabLibrary
