--- a/project.properties
+++ b/project.properties
@@ -11,14 +11,8 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-<<<<<<< HEAD
 target=android-19
-android.library.reference.1=../google-play-services_lib
-android.library.reference.2=../Map
-android.library.reference.3=../ViewPagerIndicatorTabLibrary
-=======
-target=Google Inc.:Google APIs:19
-android.library.reference.1=../../Desktop/Android-ViewPagerIndicator-master/library
-android.library.reference.2=../../Desktop/adt-bundle-windows-x86-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.3=../../Desktop/Google-Directions-Android-master/library
->>>>>>> 9864b802f11ce8ef720d48e22535f420e1a866d7
+target=android-19
+android.library.reference.3=../Map
+android.library.reference.1=../ViewPagerIndicatorTabLibrary
+android.library.reference.2=../google-play-services_lib
