--- a/project.properties
+++ b/project.properties
@@ -13,6 +13,7 @@
 # Project target.
 target=android-19
 target=android-19
-android.library.reference.3=../ViewPagerIndicatorTabLibrary
-android.library.reference.1=../Map
-android.library.reference.2=../google-play-services_lib
+android.library.reference.3=..\\ViewPagerIndicatorTabLibrary
+android.library.reference.1=..\\Map
+android.library.reference.2=..\\google-play-services_lib
+android.library.reference.4=../drag-sort-listview-master/library
