--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,10 +29,12 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="com.swat.onthespot.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/StyledIndicators" >
+            android:theme="@style/StyledIndicators"
+            android:windowSoftInputMode="adjustPan"  >
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
