--- a/project.properties
+++ b/project.properties
@@ -14,5 +14,5 @@
 target=android-19
 android.library.reference.1=..\\drag-sort-listview-master\\library
 android.library.reference.2=..\\ViewPagerIndicatorTabLibrary
-android.library.reference.3=../Map
-android.library.reference.4=../google-play-services_lib
+android.library.reference.3=..\\google-play-services_lib
+android.library.reference.4=../Map
