--- a/project.properties
+++ b/project.properties
@@ -11,8 +11,8 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.1=..\\drag-sort-listview-master\\library
-android.library.reference.2=..\\ViewPagerIndicatorTabLibrary
-android.library.reference.3=../Map
-android.library.reference.4=../google-play-services_lib
+target=Google Inc.:Google APIs:19
+android.library.reference.1=../Desktop/adt-bundle-windows-x86-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.2=../git/MapsRouting
+android.library.reference.3=../Desktop/Android-ViewPagerIndicator-master/library
+android.library.reference.4=../Desktop/drag-sort-listview-master/library
