--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -93,6 +93,7 @@
             android:label="@string/title_activity_fullscreen"
             android:theme="@style/FullscreenTheme" >
         </activity>
+        
         <activity
             android:name="com.swat.onthespot.ItineraryActivity"
             android:label="@string/title_activity_itinerary"
@@ -100,6 +101,9 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.swat.onthespot.MainActivity" />
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
     </application>
 
