--- a/project.properties
+++ b/project.properties
@@ -12,7 +12,8 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../Map
-android.library.reference.2=../google-play-services_lib
-android.library.reference.3=../ViewPagerIndicatorTabLibrary
-android.library.reference.4=../drag-sort-listview-master/library
+android.library.reference.1=..\\Map
+android.library.reference.2=..\\google-play-services_lib
+android.library.reference.3=..\\ViewPagerIndicatorTabLibrary
+android.library.reference.4=..\\drag-sort-listview-master\\library
+android.library.reference.5=../MapUtilLibrary
